Cleaning Page Resources

--- a/index.html
+++ b/index.html
@@ -7,31 +7,26 @@
    <head>
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <!-- Page Title Here -->
-      <title>Llanos Eco Lodge</title>
+      <title>Llanos EcoLodge</title>
       <!-- Meta -->
       <!-- Page Description Here -->
-      <meta name="description" content="Portfolio de Ignacio Prados - Front-End Developer.">
+      <meta name="description" content="Todas las comodidades de un hotel, combinadas con los aspectos 
+      más divertidos y prácticos de un camping by @llanosdelcastorushuaia.">
       <!-- Disable screen scaling-->
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0">
-      <!-- Twitter Meta -->
-      <meta name="twitter:site" content="@miradontsoa">
-      <meta name="twitter:creator" content="@miradontsoa">
-      <meta name="twitter:card" content="summary">
-      <meta name="twitter:title" content="Page Title">
-      <meta name="twitter:description" content="Description of the page">
-      <meta name="twitter:image" content="/img/bg-default.jpg">
       <!-- Facebook Meta -->
       <meta property="og:url" content="your website url here">
-      <meta property="og:title" content="Page Title">
-      <meta property="og:description" content="Description of the page">
+      <meta property="og:title" content="Llanos EcoLodge">
+      <meta property="og:description" content="Todas las comodidades de un hotel, combinadas con los aspectos 
+      más divertidos y prácticos de un camping by @llanosdelcastorushuaia.">
       <meta property="og:type" content="website">
-      <meta property="og:image" content="/img/bg-default.jpg">
-      <meta property="og:image:secure_url" content="/img/bg-default.jpg">
+      <meta property="og:image" content="img/items/img-sample1.jpg">
+      <meta property="og:image:secure_url" content="img/items/img-sample1.jpg">
       <meta property="og:image:type" content="image/jpg">
-      <meta property="og:image:width" content="1200">
-      <meta property="og:image:height" content="630">
+      <meta property="og:image:width" content="750">
+      <meta property="og:image:height" content="938">
       <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
-      <link  rel="icon"   href="/img/favicon.png" type="image/png" />
+      <link  rel="icon"   href="/img/favicon.png" alt="logo" type="image/png" />
       <!-- Web fonts and Web Icons -->
       <link rel="stylesheet" href="./fonts/opensans/stylesheet.css">
       <link rel="stylesheet" href="./fonts/bebas/stylesheet.css">
@@ -134,7 +129,7 @@
       <!-- BEGIN OF page cover -->
       <div class="page-cover" id="parallax-cover">
          <!-- Cover Background -->
-         <div data-depth="0.2" class="cover-bg bg-img" data-image-src="img/bg-default.jpg"></div>
+         <div data-depth="0.2" class="cover-bg bg-img" data-image-src="img/bg-default.jpg" alt="Llanos EcoLodge"></div>
          <!-- Transluscent mask as filter -->
          <div class="cover-bg-mask bg-color" data-bgcolor="rgba(2, 3, 10, 0.7)"></div>
       </div>
@@ -197,7 +192,7 @@
                <div class="slide-wrapper">
                   <div class="item-wrapper">
                      <div class="illustr ">
-                        <img class="img img-block" src="img/items/img-sample1.jpg" alt="Image">
+                        <img class="img img-block" src="img/items/img-sample1.jpg" alt="Llanos EcoLodge">
                      </div>
                      <div class="legend">
                         <h3>Libertad</h3>
@@ -215,7 +210,7 @@
                <div class="slide-wrapper">
                   <div class="item-wrapper">
                      <div class="illustr">
-                        <img class="img img-block" src="img/items/img-sample2.jpg" alt="Image">
+                        <img class="img img-block" src="img/items/img-sample2.jpg" alt="Llanos EcoLodge">
                      </div>
                      <div class="legend">
                         <h3>Comodidad</h3>
@@ -233,7 +228,7 @@
                <div class="slide-wrapper">
                   <div class="item-wrapper">
                      <div class="illustr">
-                        <img class="img img-block" src="img/items/img-sample4.jpg" alt="Image">
+                        <img class="img img-block" src="img/items/img-sample4.jpg" alt="Llanos EcoLodge">
                      </div>
                      <div class="legend">
                         <h3>Tranquilidad</h3>
@@ -251,7 +246,7 @@
                <div class="slide-wrapper">
                   <div class="item-wrapper">
                      <div class="illustr">
-                        <img class="img img-block" src="img/items/img-sample0.jpg" alt="Image">
+                        <img class="img img-block" src="img/items/img-sample0.jpg" alt="Llanos EcoLodge">
                      </div>
                      <div class="legend">
                         <h3>Aventura</h3>
@@ -300,28 +295,28 @@
                      </ul>
                      <div id="testim-content" class="cont">
                         <div class="active">
-                           <div class="img"><img src="img/items/img-people4.png" alt="Mateo Salvato"></div>
-                           <h2 style="font-weight: bold;">Cliente</h2>
+                           <div class="img"><img src="img/items/img-people1.jpg" alt="Persona"></div>
+                           <h2 style="font-weight: bold;">Carlos Minás</h2>
+                           <p>Me encantó! Una excelente opción para relajarse un par de días y alejarse de la ciudad. Los Domos son muy calentitos y cómodos, perfecto para ir en pareja o de a 3 amigos. Muy buena experiencia que te recomiendo vivir.</p>
+                        </div>
+                        <div>
+                           <div class="img"><img src="img/items/img-people2.jpg" alt="Persona"></div>
+                           <h2 style="font-weight: bold;">Cristina Holpe</h2>
+                           <p>Excelente para los adultos y los chicos. Las actividades son muy divertidas, disfrutando de los maravillosos paisajes que nos ofrece Ushuaia. Nos trataron muy bien, lo volvería a repetir.</p>
+                        </div>
+                        <div>
+                           <div class="img"><img src="img/items/img-people3.jpg" alt="Persona"></div>
+                           <h2 style="font-weight: bold;">Matías Trialari</h2>
                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                         </div>
                         <div>
-                           <div class="img"><img src="img/items/img-people4.png" alt=""></div>
-                           <h2 style="font-weight: bold;">Cliente</h2>
+                           <div class="img"><img src="img/items/img-people5.jpg" alt="Persona"></div>
+                           <h2 style="font-weight: bold;">Martina Rodríguez</h2>
                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                         </div>
                         <div>
-                           <div class="img"><img src="img/items/img-people4.png" alt=""></div>
-                           <h2 style="font-weight: bold;">Cliente</h2>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                        </div>
-                        <div>
-                           <div class="img"><img src="img/items/img-people4.png" alt=""></div>
-                           <h2 style="font-weight: bold;">Cliente</h2>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                        </div>
-                        <div>
-                           <div class="img"><img src="img/items/img-people4.png" alt=""></div>
-                           <h2 style="font-weight: bold;">Anónimo</h2>
+                           <div class="img"><img src="img/items/img-people6.jpg" alt="Persona"></div>
+                           <h2 style="font-weight: bold;">María Sol Vilano</h2>
                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                         </div>
                      </div>
@@ -332,9 +327,9 @@
                <div id="statistic" class="statistic-section one-page-section">
                   <div class="container">
                      <div class="row text-center">
-                        <div class="col-xs-12 col-md-4">
+                        <div class="col-xs-12 col-md-4 ">
                            <div class="counter">
-                              <i class="fa fa-address-book fa-2x stats-icon"></i>
+                              <i class="fa fa-users fa-2x stats-icon"></i>
                               <h2 class="timer count-title count-number">782</h2>
                               <div class="stats-line-black"></div>
                               <p class="stats-text">Clientes</p>
@@ -342,11 +337,11 @@
                         </div>
                         <div class="col-xs-12 col-md-4">
                            <div class="counter">
-                              <i class="fa fa-users fa-2x stats-icon"></i>
+                              <i class="fa fa-instagram fa-2x stats-icon"></i>
                               <h2 class="timer count-title count-number">23700
                               </h2>
                               <div class="stats-line-black"></div>
-                              <p class="stats-text"><i class="icon fa fa-instagram"></i> Seguidores</p>
+                              <p class="stats-text">Seguidores</p>
                            </div>
                         </div>
                         <div class="col-xs-12 col-md-4">
@@ -383,7 +378,7 @@
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample12.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample12.jpg" alt="Llanos EcoLodge">
                         </div>
                         <div class="media-footer">
                            <a class=" fotos btn btn-transp-arrow btn-primary" href="https://www.instagram.com/llanosecolodge/" target="_blank">
@@ -394,67 +389,67 @@
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample11.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample11.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample13.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample13.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample9.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample9.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample15.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample15.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample10.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample10.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample14.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample14.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample16.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample16.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample17.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample17.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample18.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample18.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample19.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample19.jpg" alt="Llanos EcoLodge">
                         </div>
                      </div>
                      <!-- an item -->
                      <div class="item media media-project">
                         <div class="media-img foto">
-                           <img class="" src="img/items/img-sample20.jpg" alt="An image">
+                           <img class="" src="img/items/img-sample20.jpg" alt="Llanos EcoLodge">
                         </div>
                         <div class="media-footer">
                            <a class=" fotos btn btn-transp-arrow btn-primary" href="https://www.instagram.com/llanosecolodge/" target="_blank">
