FAQ collapse Fix

--- a/index.html
+++ b/index.html
@@ -463,14 +463,32 @@
                   <h2 class="display-4 display-title">Preguntas Frecuentes</h2>
                   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                      <div class="panel panel-default">
-                        <div class="panel-heading p-3 mb-3" role="tab" id="heading0">
+                        <div class="panel-heading p-3 mb-3" role="tab" id="heading3">
                            <h3 class="panel-title">
-                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse0" aria-expanded="true" aria-controls="collapse0">
-                              ¿Cuales son los Precios? - Pagos
+                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-target="#collapse3" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                              ¿Cómo se llega al Camping?
                               </a>
                            </h3>
                         </div>
-                        <div id="collapse0" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading0">
+                        <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3" data-parent="#accordion">
+                           <div class="panel-body px-3 mb-4">
+                              <p>Ruta Nacional Nº3 Km 3033. Para llegar, siga las instrucciones de <a class="gmaps" href="https://www.google.com/maps/place/Llanos+Del+Castor/@-54.712583,-68.060363,12z/data=!4m5!3m4!1s0x0:0x5170f45d74f23797!8m2!3d-54.7125833!4d-68.0603633?hl=es" target="_blank">Google Maps.</a>
+                              </p>
+                              <div class="map-responsive">
+                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18438.94929394593!2d-68.09002813158665!3d-54.71192879861306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4c114ebe4595e9%3A0x5170f45d74f23797!2sLlanos%20Del%20Castor!5e0!3m2!1ses!2sar!4v1625807375901!5m2!1ses!2sar" width="800" height="600" style=" border-radius: 25px" allowfullscreen="" loading="lazy"></iframe>
+                              </div>
+                          </div>
+                        </div>
+                     </div>
+                     <div class="panel panel-default">
+                        <div class="panel-heading p-3 mb-3" role="tab" id="heading0">
+                           <h3 class="panel-title">
+                              <a class="collapsed" role="button" title="" data-toggle="collapse"  data-target="#collapse0" href="#collapse0" aria-expanded="true" aria-controls="collapse0">
+                              ¿Cuales son los Precios?
+                              </a>
+                           </h3>
+                        </div>
+                        <div id="collapse0" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading0" data-parent="#accordion">
                            <div class="panel-body px-3 mb-4">
                               <p>Para poder obtener un precio final, tiene que consultar en algún medio de contacto (Mail - Whatsapp - Instagram).</p>
                            </div>
@@ -479,12 +497,12 @@
                      <div class="panel panel-default">
                         <div class="panel-heading p-3 mb-3" role="tab" id="heading1">
                            <h3 class="panel-title">
-                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true" aria-controls="collapse1">
-                              ¿Qué Actividades se pueden realizar? - Estadía
+                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-target="#collapse1" href="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                              ¿Qué Actividades se pueden realizar?
                               </a>
                            </h3>
                         </div>
-                        <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
+                        <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1" data-parent="#accordion">
                            <div class="panel-body px-3 mb-4">
                               <p>Trineos con Perros - Motos de Nieve - Vehículos 4x4 - Trekkings - Esquí de Fondo - etc.</p>
                            </div>
@@ -493,33 +511,30 @@
                      <div class="panel panel-default">
                         <div class="panel-heading p-3 mb-3" role="tab" id="heading2">
                            <h3 class="panel-title">
-                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
-                              ¿Cuál es la Capacidad Máxima de los Domos? - Estadía
+                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-target="#collapse2" href="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                              ¿Cuál es la Capacidad Máxima de los Domos?
                               </a>
                            </h3>
                         </div>
-                        <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
+                        <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2" data-parent="#accordion">
                            <div class="panel-body px-3 mb-4">
                               <p>Las habitaciones están preparadas para alojar hasta 3 personas (Tienen baño privado).</p>
                            </div>
                         </div>
                      </div>
                      <div class="panel panel-default">
-                        <div class="panel-heading p-3 mb-3" role="tab" id="heading3">
+                        <div class="panel-heading p-3 mb-3" role="tab" id="heading2">
                            <h3 class="panel-title">
-                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
-                              ¿Cómo se llega al Camping? - Ubicación
+                              <a class="collapsed" role="button" title="" data-toggle="collapse" data-target="#collapse4" href="#collapse4" aria-expanded="true" aria-controls="collapse4">
+                              ¿Que opciones de Alimentación existen?
                               </a>
                            </h3>
                         </div>
-                        <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
+                        <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2" data-parent="#accordion">
                            <div class="panel-body px-3 mb-4">
-                              <p>Ruta Nacional Nº3 Km 3033. Para llegar, siga las instrucciones de Google Maps. <span style="font-weight: bold; color: #e0cdbf;">Por favor, cierre el mapa cuando no lo utilice. Gracias!</span>
-                              </p>
-                              <div class="map-responsive">
-                               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18438.94929394593!2d-68.09002813158665!3d-54.71192879861306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc4c114ebe4595e9%3A0x5170f45d74f23797!2sLlanos%20Del%20Castor!5e0!3m2!1ses!2sar!4v1625807375901!5m2!1ses!2sar" width="800" height="600" style=" border-radius: 25px" allowfullscreen="" loading="lazy"></iframe>
-                              </div>
-                          </div>
+                              <p>La estadia incluye desayuno. Para el almuerzo, merienda y cena está el restaurante de <a class="gmaps" href="https://www.instagram.com/llanosdelcastorushuaia/" target="_blank">@llanosdelcastorushuaia</a>, o sino puede llevar su propia bianda y calentar la comida en el domo
+                              (Consultar en caso de que necesite una dieta específica).</p>
+                           </div>
                         </div>
                      </div>
                   </div>
