Client Counter Fixed - Static Stats

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                         <div class="col-xs-12 col-md-4 ">
                            <div class="counter">
                               <i class="fa fa-users fa-2x stats-icon"></i>
-                              <h2 class="timer count-title count-number">782</h2>
+                              <h2 class="timer count-title count-number">+500</h2>
                               <div class="stats-line-black"></div>
                               <p class="stats-text">Clientes</p>
                            </div>
@@ -324,7 +324,7 @@
                         <div class="col-xs-12 col-md-4">
                            <div class="counter">
                               <i class="fa fa-instagram fa-2x stats-icon"></i>
-                              <h2 class="timer count-title count-number">23700
+                              <h2 class="timer count-title count-number">23.7k
                               </h2>
                               <div class="stats-line-black"></div>
                               <p class="stats-text">Seguidores</p>
@@ -333,7 +333,7 @@
                         <div class="col-xs-12 col-md-4">
                            <div class="counter">
                               <i class="fa fa-clock-o fa-2x stats-icon"></i>
-                              <h2 class="timer count-title count-number">5</h2>
+                              <h2 class="timer count-title count-number">2</h2>
                               <div class="stats-line-black"></div>
                               <p class="stats-text">Años</p>
                            </div>
