Text Card Fixed

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                      <div class="legend">
                         <h3>Libertad</h3>
                         <h4 class="numberslide">01</h4>
-                        <p>El Lugar ideal para pasar tus próximas vacaciones y sentirte parte de la naturaleza!</p>
+                        <p>El lugar ideal para pasar tus próximas vacaciones y sentirte parte de la naturaleza!</p>
                         <a class="btn btn-transp-arrow btn-primary" href="#info/1">
                         <span class="text">Siguiente</span>
                         <span class="icon arrow-right"></span>
