--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                         </div>
                         <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2" data-parent="#accordion">
                            <div class="panel-body px-3 mb-4">
-                              <p>La estadia incluye desayuno. Para el almuerzo, merienda y cena está el restaurante de <a class="gmaps" href="https://www.instagram.com/llanosdelcastorushuaia/" target="_blank">@llanosdelcastorushuaia</a>, o sino puede llevar su propia bianda y calentar la comida en el domo
+                              <p>La estadia incluye desayuno. Para el almuerzo, merienda y cena está el restaurante de <a class="gmaps" href="https://www.instagram.com/llanosdelcastorushuaia/" target="_blank">@llanosdelcastorushuaia</a>, o sino puede llevar su propia vianda y calentar la comida en el domo
                               (Consultar en caso de que necesite una dieta específica).</p>
                            </div>
                         </div>
